💄 Fixing text-overflow problem in product info

--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -56,6 +56,8 @@
             max-width: 250px;
             @extend %display-flex-flex-direction-column ;
             gap: 5px;
+            overflow: hidden;
+            text-overflow: ellipsis;
 
             &--product-name {
                 font-size: $Body;
